--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -204,16 +204,14 @@ button {
     @include align-items(center);
     position: fixed;
     z-index: 2;
-    top: 130px;
+    width: auto;
     right: 0;
     padding-top: 1.042vw;
     padding-bottom: 1.042vw;
-    width: auto;
+    top: 6.771vw;
 
     @media (max-width: 767px) {
-        padding: 3vw;
-        padding-left: 0;
-        height: 13vw;
+        top: 17vw;
     }
 
     &__dots,
@@ -225,6 +223,7 @@ button {
 
     &__dots {
         margin-top: 10px;
+        margin-top: 0.521vw;
         order: 2;
         @media (max-width: 767px) {
             display: none;
@@ -245,9 +244,9 @@ button {
         padding: 0;
 
         a {
-            width: 30px;
-            height: 30px;
-            margin: 10px 0;
+            width: 1.563vw;
+            height: 1.563vw;
+            margin: 0.521vw 0;
             background-color: #4d86a9;
             cursor: pointer;
             display: block;
@@ -281,26 +280,37 @@ button {
         &::before {
             position: absolute;
             content: "";
-            width: 123px;
-            height: 2px;
-            right: -15px;
-            bottom: -5px;
+            width: 6.406vw;
+            height: 0.104vw;
+            right: -0.781vw;
+            bottom: -0.26vw;
             background-repeat: no-repeat;
             background-image: url(../assets/images/menu-line.png);
+
+            @media (max-width: 767px) {
+                height: 2px;
+                bottom: -5px;
+                width: 90px;
+            }
         }
 
         .text {
             background-color: #12416b;
             color: #e1eaf3;
             text-transform: uppercase;
-            border-radius: 15px 0 0 15px;
-            font-size: 21px;
-            letter-spacing: 1px;
-            padding: 1px 15px 5px 15px;
+            // border-radius: 15px 0 0 15px;
+            // font-size: 21px;
+            // letter-spacing: 1px;
+            // padding: 1px 15px 5px 15px;
+            border-radius: 0.781vw 0 0 0.781vw;
+            font-size: 1.094vw;
+            letter-spacing: 0.052vw;
+            padding: 0.052vw 0.781vw 0.26vw 0.781vw;
 
             @media (max-width: 767px) {
                 font-size: 3.5vw;
-                margin-right: 1vw;
+                padding: 5px 10px;
+                border-radius: 5px 0 0 5px;
             }
         }
     }
@@ -323,7 +333,7 @@ button {
         @media (max-width: 767px) {
             width: 70%;
             height: 100% !important;
-            top: 13vw;
+            top: 0;
             padding: 8vw;
         }
 
@@ -358,6 +368,8 @@ button {
             position: absolute;
             right: 50px;
             top: 80px;
+            right: 2.604vw;
+            top: 4.167vw;
 
             @media (max-width: 767px) {
                 margin-top: 0.2vw;
@@ -366,12 +378,13 @@ button {
 
         a {
             position: relative;
-            margin: 14px 20px;
-            font-size: 1.042vw;
+
             color: #fff;
             text-decoration: none;
             z-index: 1;
             padding-bottom: 0.26vw;
+            margin: 0.729vw 1.042vw;
+            font-size: 1.042vw;
             @include transition(all 0.3s ease);
 
             @media (max-width: 767px) {
@@ -382,10 +395,10 @@ button {
                 position: absolute;
                 content: "";
                 bottom: 0;
-                height: 1px;
-                width: 50px;
                 right: 0;
                 background-color: transparent;
+                height: 0.052vw;
+                width: 2.604vw;
             }
             &.active,
             &:hover {
@@ -409,12 +422,28 @@ button {
             font-size: 32px;
             padding-right: 35px;
             padding-top: 30px;
+            font-size: 1.667vw;
+            padding-right: 1.823vw;
+            padding-top: 1.563vw;
+            opacity: 1 !important;
+
+            @media (max-width: 767px) {
+                font-size: 25px;
+                margin-top: 50px;
+                padding-top: 0;
+                display: inline-block;
+            }
         }
     }
     &__absolute-list {
         @include flexbox;
         @include flex-direction(column);
         margin-top: 30px;
+        margin-top: 1.563vw;
+
+        @media (max-width: 767px) {
+            margin-top: 35px;
+        }
     }
     .line {
         background-color: #e1eaf3;
@@ -617,26 +646,37 @@ button {
 .header {
     text-align: center;
     background-color: #12416b;
-    padding: 24px 20px 21px 20px;
+    padding: 1.25vw 1.042vw 1.094vw 1.042vw;
+    @media (max-width: 767px) {
+        padding: 4vw;
+    }
+
     &--logo {
         display: inline-block;
-        max-width: 331px;
+        width: 17.24vw;
         margin-left: auto;
         right: auto;
+        @media (max-width: 767px) {
+            width: 50%;
+        }
     }
 }
 
 .btn-shadow {
     @include SVNGothamBold;
-    font-size: 24px;
+
     color: #fff;
     text-transform: uppercase;
     position: relative;
-    padding: 12px 60px;
-    border-radius: 15px;
     background-color: #f8991d;
-    border: 3px solid #f8991d;
     animation: border-line 0.8s infinite;
+
+    // padding: 12px 60px;
+    // border-radius: 15px;
+    // border: 3px solid #f8991d;
+    padding: 0.625vw 3.125vw;
+    border-radius: 0.781vw;
+    border: 0.156vw solid #f8991d;
     &:hover {
         border-color: #fff;
         color: #fff;
@@ -646,11 +686,14 @@ button {
         content: "";
         height: 100%;
         width: 100%;
-        border-radius: 15px;
         background-color: #935300;
         z-index: -1;
-        left: 11px;
-        top: 11px;
+        // border-radius: 15px;
+        // left: 11px;
+        // top: 11px;
+        border-radius: 0.781vw;
+        left: 0.573vw;
+        top: 0.573vw;
     }
 }
 
@@ -659,9 +702,12 @@ button {
     background-color: #12416b;
     text-align: center;
     text-transform: uppercase;
-    border-radius: 10px;
-    padding: 12px 60px;
-    padding-bottom: 10px;
+    // border-radius: 10px;
+    // padding: 12px 60px;
+    // padding-bottom: 10px;
+    border-radius: 0.521vw;
+    padding: 0.625vw 3.125vw;
+    padding-bottom: 0.521vw;
     @include SVNGothamBold;
     &:hover {
         color: #fff;
@@ -669,7 +715,13 @@ button {
     }
 }
 .btn {
-    font-size: 23px;
+    // font-size: 23px;
+    font-size: 1.198vw;
+    @media (max-width: 767px) {
+        font-size: 15px;
+        padding: 3px 20px;
+        border-radius: 5px;
+    }
 }
 .social {
     display: flex;
@@ -677,22 +729,41 @@ button {
     justify-content: center;
     position: fixed;
     z-index: 9;
-    left: 35px;
-    top: 135px;
-    padding-top: 260px;
+    // left: 35px;
+    // top: 135px;
+    // padding-top: 260px;
+    // width: 85px;
+    left: 1.823vw;
+    top: 7.031vw;
+    padding-top: 13.542vw;
+    width: 4.427vw;
 
-    width: 85px;
+    @media (max-width: 767px) {
+        flex-direction: row;
+        align-items: center;
+        width: 100%;
+        max-width: 400px;
+        left: 0;
+        right: 0;
+        top: auto;
+        bottom: 0;
+        padding: 5px 0;
+        margin: 0 auto;
+    }
     .btn {
         @include SVNGothamBold;
         color: #12416b;
-        font-size: 24px;
         text-transform: uppercase;
         position: relative;
         padding: 0;
         text-align: center;
-        height: 74px;
         width: 100%;
-
+        height: 3.854vw;
+        font-size: 1.25vw;
+        @media (max-width: 767px) {
+            height: 40px;
+            font-size: 18px;
+        }
         &:hover {
             &::before {
                 background-color: #935300;
@@ -708,20 +779,25 @@ button {
             height: 100%;
             width: 100%;
             border-radius: 15px;
+            border-radius: 1.823vw;
         }
         &::before {
             background-color: #f8991d;
             animation: bruh 1s linear infinite;
             z-index: 2;
-            left: 9px;
             top: 0;
+            left: 9px;
             border: 3px solid #fff;
+            left: 0.469vw;
+            border: 0.156vw solid #fff;
         }
         &::after {
             background-color: #935300;
             z-index: 1;
-            left: 3px;
-            top: 6px;
+            // left: 3px;
+            // top: 6px;
+            left: 0.156vw;
+            top: 0.313vw;
         }
         @keyframes bruh {
             0% {
@@ -745,27 +821,43 @@ button {
             position: relative;
             z-index: 3;
             color: #fff;
-            padding: 12px 30px;
-            padding-right: 20px;
             display: block;
+            padding: 0.625vw 1.563vw;
+            padding-right: 1.042vw;
         }
     }
     &-btn {
-        transform: rotateZ(-90deg);
-        width: 250px;
         position: absolute;
-        left: -88px;
+        transform: rotateZ(-90deg);
         top: 21%;
+        // width: 250px;
+        // left: -88px;
+        width: 13.021vw;
+        left: -4.583vw;
+        @media (max-width: 767px) {
+            transform: none;
+            width: auto;
+            position: static;
+            flex: 1;
+            margin-right: 5px;
+        }
     }
     &-icon {
-        margin-top: 20px;
-        width: 80px;
-        height: 80px;
+        margin-top: 1.042vw;
+        width: 4.167vw;
+        height: 4.167vw;
         display: inline-block;
         border-radius: 50%;
+
+        @media (max-width: 767px) {
+            width: 40px;
+            height: 40px;
+            margin: 0 5px;
+        }
         img {
             border-radius: 50%;
             box-shadow: 0 0 3px #fff;
+            box-shadow: 0 0 0.156vw #fff;
         }
     }
     &-phone {
