--- a/src/views/pages/index.twig
+++ b/src/views/pages/index.twig
@@ -55,7 +55,7 @@
         <a name="CSBH" link="sec09" href="#sec09">sec09</a>
     </div>
 </div>
-<div class="header">
+<div class="header wow fadeIn">
     <a href="#" class="header--logo">
         <img src="../../assets/images/logo.png" alt="">
     </a>
@@ -83,7 +83,7 @@
     </div>
     <div class="block1__wrap">
         <div class="block1__wrap--content">
-            <div class="block1__title">
+            <div class="block1__title wow fadeInRight" data-wow-delay="0.1s">
                 HƯỚNG DẪN
                 <br>
                 BÁN HÀNG
@@ -92,22 +92,24 @@
                 <br>
                 CHo NGƯỜI MỚI
             </div>
-            <div class="block1__des">Việc bán hàng qua Amazon là một trong những cách nhanh nhất để các doanh nghiệp có thể xây dựng thương hiệu của riêng mình.</div>
-            <div class="block1__sub-title">
+            <div class="block1__des wow fadeInRight" data-wow-delay="0.2s">Việc bán hàng qua Amazon là một trong những cách nhanh nhất để các doanh nghiệp có thể xây dựng thương hiệu của riêng mình.</div>
+            <div class="block1__sub-title wow fadeInRight" data-wow-delay="0.3s">
                 NHẬN NGAY TƯ VẤN 1 - 1
                 <br>
                 GIA NHẬP AMAZON DỄ DÀNG
             </div>
-            <button class="btn btn-shadow">
-                ĐĂNG KÝ NGAY TẠI ĐÂY!
-            </button>
+            <div class=" wow fadeInRight" data-wow-delay="0.4s">
+                <button class="btn btn-shadow">
+                    ĐĂNG KÝ NGAY TẠI ĐÂY!
+                </button>
+            </div>
         </div>
     </div>
 </section>
 <section class="block block2 sec02" id="sec02">
     <div class="block2__wrap">
         <div class="block2__left">
-            <div class="block2__left--item">
+            <div class="block2__left--item wow fadeInUp" data-wow-delay="0.1s">
                 <h2 class="number">
                     300
                     <br>
@@ -115,7 +117,7 @@
                 </h2>
                 <h3 class="des">khách hàng đang hoạt động tại hơn 180 quốc gia</h3>
             </div>
-            <div class="block2__left--item">
+            <div class="block2__left--item wow fadeInUp" data-wow-delay="0.2s">
                 <h2 class="number">
                     195
                     <br>
@@ -123,7 +125,7 @@
                 </h2>
                 <h3 class="des">khách truy cập hàng tháng (chỉ tính riêng ở Hoa Kỳ).</h3>
             </div>
-            <div class="block2__left--item">
+            <div class="block2__left--item wow fadeInUp" data-wow-delay="0.3s">
                 <h2 class="number">
                     1,5 tỷ đô la
                 </h2>
@@ -131,9 +133,11 @@
             </div>
         </div>
         <div class="block2__right">
-            <h2 class="block2__right--title"> VÌ SAO BẠN NÊN GIA NHẬP BÁN HÀNG XUYÊN BIÊN GIỚI CÙNG AMAZON?</h2>
-            <button class="btn btn-blue-dark">đăng ký ngay tại đây</button>
-            <div class="block2__right--img">
+            <h2 class="block2__right--title wow fadeInUp" data-wow-delay="0.1s"> VÌ SAO BẠN NÊN GIA NHẬP BÁN HÀNG XUYÊN BIÊN GIỚI CÙNG AMAZON?</h2>
+            <div class="wow fadeInUp" data-wow-delay="0.1s">
+                <button class="btn btn-blue-dark">đăng ký ngay tại đây</button>
+            </div>
+            <div class="block2__right--img wow fadeIn" data-wow-delay="0.2s">
                 <img src="../../assets/images/block2-img.jpg" alt=" VÌ SAO BẠN NÊN GIA NHẬP BÁN HÀNG XUYÊN BIÊN GIỚI CÙNG AMAZON?">
             </div>
         </div>
@@ -141,10 +145,10 @@
 </section>
 <section class="block block3 sec03" id="sec03">
     <div class="block3__wrap">
-        <div class="block3__img">
+        <div class="block3__img wow fadeIn" data-wow-delay="0.2s">
             <img src="../../assets/images/block3-img.jpg" alt="CƠ HỘI PHÁT TRIỂN DOANH NGHIỆP, GIA TĂNG DOANH SỐ">
         </div>
-        <div class="block3__content">
+        <div class="block3__content wow fadeIn" data-wow-delay="0.1s">
             <h2 class="block3__title">
                 CƠ HỘI PHÁT TRIỂN DOANH NGHIỆP, GIA TĂNG DOANH SỐ
             </h2>
@@ -171,7 +175,7 @@
     <div class="block4__bg-mb mb">
         <img src="../../assets/images/block4-bg-mg.jpg" alt="QUYỀN LỢI BỀN VỮNG, TỰ TIN BÁN HÀNG XUYÊN BIÊN GIỚI">
     </div>
-    <div class="block4__wrap">
+    <div class="block4__wrap wow fadeInUp">
         <h2 class="block4__title">
             QUYỀN LỢI BỀN VỮNG, TỰ TIN BÁN HÀNG XUYÊN BIÊN GIỚI
         </h2>
@@ -194,14 +198,14 @@
 </section>
 <section class="block block5 sec05" id="sec05">
     <div class="block5__wrap">
-        <div class="block5__left">
+        <div class="block5__left wow fadeIn">
             <img src="../../assets/images/block5-img.jpg" alt="CƠ HỘI PHÁT TRIỂN DOANH NGHIỆP, GIA TĂNG DOANH SỐ">
         </div>
         <div class="block5__right">
-            <h2 class="block5__title">
+            <h2 class="block5__title wow fadeInUp" data-wow-delay="0.1s">
                 TIẾT KIỆM THỜI GIAN, NÂNG CAO LỢI NHUẬN VỚI QUY TRÌNH TƯ VẤN 1 - 1 CỦA AMAZON
             </h2>
-            <div class="block5__des">
+            <div class="block5__des wow fadeInUp" data-wow-delay="0.2s">
                 <div>Dịch vụ tư vấn 1-1 của Amazon Global Selling nhằm giúp bạn:</div>
                 <div>
                     <b>- Tiết kiệm thời gian</b>
@@ -212,7 +216,7 @@
                     : Đăng ký thành công tài khoản trên Amazon Global Selling là bước khởi đầu để bạn phát triển doanh nghiệp xuyên biên giới, và nắm bắt cơ hội phát triển dài lâu.
                 </div>
             </div>
-            <button class="btn btn-blue-dark">đăng ký ngay tại đây</button>
+            <button class="btn btn-blue-dark wow fadeInUp" data-wow-delay="0.3s">đăng ký ngay tại đây</button>
         </div>
     </div>
 </section>
@@ -223,7 +227,7 @@
     <div class="block6__bg-mb mb">
         <img src="../../assets/images/block6-bg-mb.jpg" alt="CƠ HỘI PHÁT TRIỂN DOANH NGHIỆP, GIA TĂNG DOANH SỐ">
     </div>
-    <div class="block6__wrap">
+    <div class="block6__wrap wow fadeInUp">
         <div class="block6__title">
             đăng ký ngay tại đây!
             <br>
@@ -234,7 +238,7 @@
 </section>
 <section class="block block7 sec07" id="sec07">
     <div class="block7__wrap">
-        <div class="block7__head">
+        <div class="block7__head wow fadeIn">
             <h2 class="block7__title">
                 Lời chào từ Amazon Global Selling Việt Nam!
             </h2>
@@ -437,7 +441,7 @@
                 </div>
             </div>
         </div>
-        <a href="#" class=" block8__view-more">
+        <a href="#" class=" block8__view-more wow fadeIn">
             Xem tiếp
             <div class="block8__arrow">
                 <img src="../../assets/images/arrow.png" alt="tin tuc">
@@ -453,14 +457,14 @@
         <div class="block9__content">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-md-6 col-lg-4 wow fadeInUp">
                         <div class="block9__title">Lorem ipsum dolor sit</div>
                         <div class="block9__text">Consectetur adipiscing elit.</div>
                         <div class="block9__text">Consectetur adipiscing elit.</div>
                         <div class="block9__text">Consectetur adipiscing elit.</div>
                         <div class="block9__text">Consectetur adipiscing elit.</div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4">
+                    <div class="col-12 col-md-6 col-lg-4 wow fadeInUp">
                         <div class="block9__title">Lorem ipsum dolor sit</div>
                         <div class="block9__text">Consectetur adipiscing elit.</div>
                         <div class="block9__text">Consectetur adipiscing elit.</div>
