--- a/src/views/pages/index.twig
+++ b/src/views/pages/index.twig
@@ -303,57 +303,15 @@
         <div class="block7__question">
             <div class="question">
                 <div class="question--form">
+                    {#
                     <div class="question--item">
                         <label class="question--label">1) Vui lòng cung cấp tên của người liên hệ chính (*):</label>
                         <input type="text" class="question--input">
                     </div>
-                    <div class="question--item">
-                        <label class="question--label">2) Vui lòng cung cấp tên của người liên hệ chính (*):</label>
-                        <input type="text" class="question--input">
-                    </div>
-                    <div class="question--item">
-                        <label class="question--label">3) Vui lòng cung cấp tên của người liên hệ chính (*):</label>
-                        <input type="text" class="question--input">
-                    </div>
-                    <div class="question--item">
-                        <label class="question--label">4) Vui lòng cung cấp tên của người liên hệ chính (*):</label>
-                        <input type="text" class="question--input">
-                    </div>
-                    <div class="question--item">
-                        <label class="question--label">5) Vui lòng cung cấp tên của người liên hệ chính (*):</label>
-                        <input type="text" class="question--input">
-                    </div>
-                    <div class="question--item">
-                        <label class="question--label">6) Vui lòng cung cấp tên của người liên hệ chính (*):</label>
-                        <input type="text" class="question--input">
-                    </div>
-                    <div class="question--item">
-                        <label class="question--label">7) Vui lòng cung cấp tên của người liên hệ chính (*):</label>
-                        <input type="text" class="question--input">
-                    </div>
-                    <div class="question--item">
-                        <label class="question--label">8) Vui lòng cung cấp tên của người liên hệ chính (*):</label>
-                        <input type="text" class="question--input">
-                    </div>
-                    <div class="question--item">
-                        <label class="question--label">9) Vui lòng cung cấp tên của người liên hệ chính (*):</label>
-                        <input type="text" class="question--input">
-                    </div>
-                    <div class="question--item">
-                        <label class="question--label">10) Vui lòng cung cấp tên của người liên hệ chính (*):</label>
-                        <input type="text" class="question--input">
-                    </div>
-                    <div class="question--item">
-                        <label class="question--label">11) Vui lòng cung cấp tên của người liên hệ chính (*):</label>
-                        <input type="text" class="question--input">
-                    </div>
-                    <div class="question--item">
-                        <label class="question--label">12) Vui lòng cung cấp tên của người liên hệ chính (*):</label>
-                        <input type="text" class="question--input">
-                    </div>
-                    <div class="question--button">
-                        <button class="btn btn-blue-dark">Gửi</button>
-                    </div>
+                    #}
+                </div>
+                <div class="question--button">
+                    <button class="question--submit btn btn-blue-dark">Gửi ngay</button>
                 </div>
             </div>
         </div>
